@@ -1,8 +1,8 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/clib/ctype.h,v $
- * $Date: 2001/01/29 15:10:19 $
- * $Revision: 1.2 $
+ * $Date: 2001/09/14 14:01:17 $
+ * $Revision: 1.2.2.1 $
  * $State: Exp $
  * $Author: admin $
  *
@@ -64,7 +64,7 @@ extern int isupper (int __c);
 
 /* c is a printable character.  */
 extern int isprint (int __c);
-#define isprint(c) (__ctype[(int) (c)] & ~___ctype_ctrl)
+#define isprint(c) (~__ctype[(int) (c)] & ___ctype_ctrl)
 
 /* c is a printable character other than a space or a
    alphanumeric character.  */
